<resources>
    <string name="app_name">YandexStreamsAndroid</string>

    <!-- Bottom navigation view -->
    <string name="title_search">ПОИСК</string>
    <string name="title_gamecode">ГЕЙМКОД</string>
    <string name="title_profile">ПРОФИЛЬ</string>

    <!-- Search fragment -->
    <string name="title_search_toolbar_hint">ПОИСК</string>
    <string name="title_search_toolbar">Мои подписки</string>
    <string name="title_search_toolbar_results">Результаты поиска</string>
    <string name="search_permission_warning">Войдите в аккаунт Twitch, чтобы видеть подписки.</string>
    <string name="search_permission_btn">Войти</string>
    <string name="string_stream_viewers">%1$d зрителей</string>

    <!-- Profile fragment -->
    <string name="title_profile_toolbar">Мой профиль</string>
    <string name="title_profile_history">История</string>
    <string name="title_profile_manage">Соединения</string>
    <string name="title_profile_notification">Уведомления</string>
    <string name="title_profile_exit">Выход</string>
    <string name="title_profile_login">Войти</string>
    <string name="string_profile_balance">%1$.2f руб.</string>

    <!-- Donate fragment -->
    <string name="title_donate_edittext_nick">Введите никнейм</string>
    <string name="title_donate_edittext_value">Сумма доната</string>
    <string name="title_donate_edittext_text">Текст сообщения</string>
    <string name="title_donate_button_text">Текст</string>
    <string name="title_donate_button_audio">Аудио</string>
    <string name="title_donate_description_audio">Запись аудио</string>
    <string name="title_donate_submit_button">Отправить</string>
    <string name="err_unknown">Неизвестная ошибка</string>
    <string name="err_network_fail">Проверьте подключение к интернету</string>
    <string name="err_server_fail">Ошибка сервера. Попробуйте позже</string>

    <!-- History fragment -->
    <string name="title_history_toolbar">История</string>

    <!-- Gamecode fragment -->
    <string name="gamecode_permission_warning">Необходимо разрешить доступ к камере.</string>
    <string name="gamecode_permission_btn">Разрешить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
